@@ -1299,6 +1299,22 @@ public class DataBinderTests extends TestCase {
 		assertEquals("beanName", disallowedFields[0]);
 	}
 
+	public void testBindingWithSystemFieldError() throws Exception {
+		TestBean rod = new TestBean();
+		DataBinder binder = new DataBinder(rod, "person");
+		MutablePropertyValues pvs = new MutablePropertyValues();
+		pvs.addPropertyValue("class.classLoader.URLs[0]", "http://myserver");
+		binder.setIgnoreUnknownFields(false);
+		try {
+			binder.bind(pvs);
+			fail("Should have thrown NotWritablePropertyException");
+		}
+		catch (NotWritablePropertyException ex) {
+			System.out.println("-> " + ex);
+			assertTrue(ex.getMessage().contains("classLoader"));
+		}
+	}
+
 
 	private static class TestBeanValidator implements Validator {
 
